<resources>
    <string name="app_name">HKUDirectory</string>
    <string name="welcome">HKU Directory</string>
    <string name="forgot_your_pin"><u>Forgot your PIN?</u></string>
    <string name="email_address">Email Address</string>
    <string name="emailreg">Input your email address</string>
    <string name="passwordreg">Input your password</string>
    <string name="namereg">Input your name</string>
    <string name="Register">Register</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="faq">FAQ</string>
    <string name="create_user_id">CREATE USER ID</string>
    <string name="security_tips">SECURITY TIPS</string>
</resources>