<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="19dp"
        >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/hku_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email_address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/field_frame_rounded"
            android:padding="19dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/field_frame_rounded"
            android:padding="19dp"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@color/faded_blue"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/login_button"
            android:onClick="login"
            />


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgot_your_pin"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:autoLink="all"
            android:id="@+id/forgot_id"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/faq"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/field_frame_rounded"
            android:padding="15dp"
            android:id="@+id/FAQ"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/faded_blue"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:id="@+id/reg_button"
            android:text="@string/create_user_id"
            android:onClick="reg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/security_tips"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/field_frame_rounded"
            android:padding="15dp"
            android:id="@+id/security_tips"/>


    </LinearLayout>

</RelativeLayout>